<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bottom_nav_title_main">Главная</string>
    <string name="bottom_nav_title_fav">Избранное</string>
    <string name="bottom_nav_title_visits">Визиты</string>
    <string name="bottom_nav_title_chats">Сообщения</string>
    <string name="bottom_nav_title_profile">Профиль</string>
    <string name="org_average_bill">от %1$s ₽</string>

    <string name="bottom_sheet_date_title">Дата</string>
    <string name="bottom_sheet_date_many_slots_description">Много свободных окошек в этот день</string>
    <string name="bottom_sheet_date_only_time">Есть время только: %1$s</string>

    <string-array name="month_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="month_array_order">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string-array name="days_of_week">
        <item>понедельник</item>
        <item>вторник</item>
        <item>среда</item>
        <item>четверг</item>
        <item>пятница</item>
        <item>суббота</item>
        <item>воскресенье</item>
    </string-array>

    <string-array name="days_of_week_short">
        <item>пн</item>
        <item>вт</item>
        <item>ср</item>
        <item>чт</item>
        <item>пт</item>
        <item>сб</item>
        <item>вс</item>
    </string-array>

    <plurals name="org_total_scores">
        <item quantity="one">%1$d оценка</item>
        <item quantity="two">%1$d оценки</item>
        <item quantity="few">%1$d оценки</item>
        <item quantity="other">%1$d оценок</item>
    </plurals>
    <plurals name="timings_minutes">
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <plurals name="timings_hours">
        <item quantity="one">%1$d час</item>
        <item quantity="few">%1$d часа</item>
        <item quantity="other">%1$d часов</item>
    </plurals>
    <plurals name="review_stars">
        <item quantity="one">%1$d звезда</item>
        <item quantity="two">%1$d звезды</item>
        <item quantity="few">%1$d звезды</item>
        <item quantity="other">%1$d звезд</item>
    </plurals>
    <plurals name="review_count">
        <item quantity="one">%1$d отзыв</item>
        <item quantity="two">%1$d отзыва</item>
        <item quantity="few">%1$d отзыва</item>
        <item quantity="other">%1$d отзывов</item>
    </plurals>
    
    <string name="visify_ui_kit_retry_message">Попробовать ещё раз</string>
    <string name="visify_ui_kit_alert_dialog_ok">Ок</string>

    <string name="error_description">Произошла ошибка при загрузке</string>
    <string name="error_try_again">Попробовать еще раз</string>

    <string name="auth_stub_header">Войдите в приложение</string>
    <string name="auth_stub_hint">Для доступа к вашему избранному, визитам и записи в салоны</string>
    <string name="auth_stub_button">Войти</string>

    <string name="visits_active">Активен</string>
    <string name="visits_search_stopped">Поиск остановлен</string>
    <string name="visits_closed">Закрыт</string>
    <string name="visits_details">Детали записи</string>

    <string name="create_order_header_sign">Запись</string>

    <string name="settings_notifications_disable_title">Уведомления выключены</string>
    <string name="settings_notifications_disable_text">Вы отключили уведомления. Что бы получать уведомления о новых сообщениях и откликах, включите их в настройках</string>
    <string name="settings_notifications_disable_button">Открыть настройки</string>
</resources>